# Path-Tracer

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt  assert.h  atomic.h  atomic_gcc.c  atomic_msvc.c  bmp.c  bmp.h  filesystem.c  filesystem.h  main.c  memory.c  memory.h  random.c  random.h  thread_pool.c  thread_pool.h  thread_pool_internal.h  thread_pool_posix.c  thread_pool_windows.c  vector_math.c  vector_math.h
